Bug 269566 - [macOS] Screen or Window sharing in Safari stops working once paused, resume option does not work - WebRTC getDisplayMedia
Summary: [macOS] Screen or Window sharing in Safari stops working once paused, resume ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebRTC (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: youenn fablet
URL:
Keywords: InRadar
: 269888 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-02-16 02:08 PST by youenn fablet
Modified: 2024-02-23 13:54 PST (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description youenn fablet 2024-02-16 02:08:00 PST
<rdar://problem/122187886>
Comment 1 youenn fablet 2024-02-16 03:51:16 PST
Pull request: https://github.com/WebKit/WebKit/pull/24608
Comment 2 EWS 2024-02-18 01:31:36 PST
Committed 274943@main (5a6b1df677bb): <https://commits.webkit.org/274943@main>

Reviewed commits have been landed. Closing PR #24608 and removing active labels.
Comment 3 Eric Carlson 2024-02-23 13:54:17 PST
*** Bug 269888 has been marked as a duplicate of this bug. ***